Fix large text on small screens

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
 }
 
 h1 {
+  font-size: 1.5em;
   text-align: center;
   color: white;
   background-color: steelblue;
@@ -18,7 +19,7 @@ h1 {
 }
 
 #color-display {
-  font-size: 200%;
+  font-size: 150%;
 }
 
 .square {
@@ -47,7 +48,7 @@ h1 {
 
 #message {
   display: inline-block;
-  width: 20%;
+  width: 10%;
 }
 
 .selected {
@@ -74,4 +75,18 @@ button:hover,
 button:active {
   color: white;
   background-color: steelblue;
+}
+
+@media screen and (min-width: 500px) {
+  h1 {
+    font-size: 2em;
+  }
+
+  #color-display {
+    font-size: 200%;
+  }
+
+  #message {
+    width: 20%;
+  }
 }
